mqtt2db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt2db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt2db
  template:
    metadata:
      labels:
        app: mqtt2db
    spec:
      containers:
      - name: mqtt2db
        image: ghcr.io/seboknt/mqtt2db:latest
      imagePullSecrets:
      - name: github-pull-secret
