php2db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php2db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php2db
  template:
    metadata:
      labels:
        app: php2db
    spec:
      containers:
      - name: php2db
        image: ghcr.io/seboknt/php2db:latest
      imagePullSecrets:
      - name: github-pull-secret
