php2db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php2db-service
spec:
  selector:
    app: php2db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
